assets/styles/layout/_header.scss
// -----------------------------------------------------------------------------
// This file contains all styles related to the header of the site/application.
// -----------------------------------------------------------------------------

.main-header{
  position: fixed;
	@include size(100%,0px);
	font-family: 'Aktiv Grotesk Corp';
	z-index: 10;
	padding-top: 30px;
	@include homeMedium{
		position: fixed;
	}
}

.menu {
	margin: 0;
	display: flex;
	padding: 0 5% 0 5%;
	font-size: 13px;
	font-weight: 500;
	justify-content: space-between;

	li{
		list-style: none;
		opacity: 0;
		transition: all cubic-bezier(0.645, 0.045, 0.355, 1);
		transition-duration: 0.9s;
		// transition-delay: 3.5s;
		transform: translateX(-60px);

		a{
			text-decoration: none;
			color: #353535;
		}
	}

	@include homeMedium{
		justify-content: flex-start;
	}

}

.menu__back-home{
	margin-left: auto;
}

.menu__about{
	margin-left: 30px;
}

.container--visible .menu li{
	transition: all cubic-bezier(0.645, 0.045, 0.355, 1);
	transition-duration: 0.9s;
	transform: translateX(0);
	opacity: 1;
	// transition-delay: 3.5s;
}

